hphp/hack/test/typecheck/nameof/parsing/nameof_eif.php.exp
File "nameof_eif.php", line 5, characters 12-27:
`nameof` can only be used with a class (Parsing[1002])
