hphp/hack/test/typecheck/nameof/parsing/nameof_eif.php
<?hh

class C {
  public static function f(): void {
    nameof C ? true : false; // T171578360
  }
}
